# udemy-ai-agents-and-workflows

./: .pre-commit-config.yaml  README.md  main-ollama.py  main.py  pyproject.toml
agent/: main.py
crewai/research_crew/: pyproject.toml  report.md
crewai/research_crew/src/research_crew/: crew.py  main.py
multi-agent/: database.py  main.py  pyproject.toml
